[gd_scene load_steps=2 format=3 uid="uid://o0sl7vyesp7s"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_tvhh2"]

[node name="Main_menu" type="Node2D"]
script = ExtResource("1_tvhh2")

[node name="Start" type="Button" parent="."]
offset_left = 408.0
offset_top = 104.0
offset_right = 632.0
offset_bottom = 160.0
text = "Start"

[node name="Character Selection" type="Button" parent="."]
offset_left = 408.0
offset_top = 208.0
offset_right = 632.0
offset_bottom = 264.0
text = "Character Selection"

[node name="Settings" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="Quit" type="Button" parent="."]
offset_left = 408.0
offset_top = 414.0
offset_right = 632.0
offset_bottom = 478.0
text = "Quit"

[node name="Tutorial" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="Load" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Character Selection" to="." method="_on_character_selection_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
